After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 630471 - [tag] ligatures "Œ" and "œ" are not supported in freeform strings
[tag] ligatures "Œ" and "œ" are not supported in freeform strings
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-09-23 21:29 UTC by sreerenj
Modified: 2010-09-28 09:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch for supporting Ligatures Œ and œ. (1.11 KB, patch)
2010-09-23 21:29 UTC, sreerenj
committed Details | Review

Description sreerenj 2010-09-23 21:29:27 UTC
Created attachment 170966 [details] [review]
patch for supporting Ligatures Œ and œ.

The ligatures "Œ"  and "œ" were removed from ISO-8859-1 encoding. So the are not supporting in tag extraction.I think we can change the final encoding fallback(if all the other assumptions about input string's encodings are failing)  in  gst_tag_freeform_string_to_utf8 (gst-plugins-base/gst-libs/gst/tag/tags.c ) from ISO-8859-1 to Windows-1252.Since Windows-1252 is the superset of ISO-8859-1 ,i think it wont create any issue.
Comment 1 Tim-Philipp Müller 2010-09-28 09:37:19 UTC
Makes sense, committed, thanks for the patch (I kept a paranoia-fallback for ISO-8859-1 though):

 commit 5ef53dcf5cff787adeedbddc81eddfdd637f559a
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Mon Sep 27 14:36:17 2010 +0100

    tags: try ISO-8859-1 as second fallback in case WINDOWS-1252 is not supported
    
    Better safe than sorry. Some embedded systems may use crippled iconv
    implementations or not support WINDOWS-1252 for other reasons.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=630471

 commit b3e39daee08ac079eb43d849e3c96e4588a8f977
 Author: Sreerenj Balachandran <sreerenj.balachandran@nokia.com>
 Date:   Thu Sep 23 23:53:48 2010 +0300

    tags: when converting freeform strings try Windows-1252 as fallback instead of ISO-8859-1
    
    Windows-1252 is a superset of ISO-8859-1, which uses some space
    allocated to control characters for additional printable characters.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=630471