tags: when converting freeform strings try Windows-1252 as fallback instead of ISO-8859-1

Windows-1252 is a superset of ISO-8859-1, which uses some space
allocated to control characters for additional printable characters.

https://bugzilla.gnome.org/show_bug.cgi?id=630471